--- a/templates/direct_messages/message_room.html
+++ b/templates/direct_messages/message_room.html
@@ -12,8 +12,10 @@
       </a>
     </div>
     <div>
-      <div class="fs-5 fw-bold">メッセージ部屋</div>
+      <!-- フォロワー名 -->
+      <div class="fs-5 fw-bold">{{ follower.display_name }}</div>
     </div>
+
   </div>
 </div>
 
