--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>{% block title %}{% endblock %}</title>
+    <style>
+      /* レイアウト */
+      .main-layout {
+        max-width: 1280px;
+        height: 100vh;
+        max-height: 100vh;
+      }
+      /* ヘッダー部分の高さ */
+      .header {
+        height: 70px;
+      }
+      /* メイン部分のスクロール設定 */
+      .main-scroll {
+        max-height: calc(100vh - 70px);
+        overflow-y: auto;
+      }
+    </style>
   </head>
   <body class="bg-dark text-white">
     {% if messages %}
       {% include "_message.html" %}
     {% endif %}
-    <div class="container-fluid min-vh-100 d-flex flex-column" style="max-width: 1280px;">
+    <div class="container d-flex flex-column main-layout">
       <!-- ヘッダー -->
       {% include "_header.html" %}
 
@@ -28,7 +45,7 @@
           </div>
         {% endif %}
         <!-- メインコンテンツ -->
-        <main class="col-12 col-sm-10 col-md-8 col-lg-5 border-start border-end border-secondary overflow-hidden p-0">
+        <main class="col-12 col-sm-10 col-md-8 col-lg-5 border-start border-end border-secondary p-0 main-scroll">
           {% block content %}{% endblock %}
         </main>
         <!-- サイドバー（右） -->
