--- a/templates/direct_messages/index.html
+++ b/templates/direct_messages/index.html
@@ -20,7 +20,7 @@
 <!-- メッセージ一覧 -->
 <div>
   {% if followers %}
-    {% for follower in followers %}
+    {% for relation in followers %}
       {% include "direct_messages/_message_room_link.html" %}
     {% endfor %}
   {% else %}
