💄 フォーム周りのデザインやページレイアウト修正

--- a/templates/direct_messages/_messageform.html
+++ b/templates/direct_messages/_messageform.html
@@ -14,7 +14,7 @@
       {% endif %}
     </div>
     <!-- 送信ボタン -->
-    <button type="submit" class="btn btn-light rounded-pill px-4 fw-bold text-nowrap" role="button">
+    <button type="submit" class="btn btn-light rounded-pill" role="button">
       <i class="bi bi-send me-1"></i>
     </button>
   </div>
