--- a/templates/_message.html
+++ b/templates/_message.html
@@ -1,14 +1,14 @@
 {% for message in messages %}
-<div
-  class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %} alert-dismissible fade show"
-  role="alert"
->
-  {{ message }}
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-  ></button>
-</div>
+  <div
+    class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %} alert-dismissible fade show z-3 position-absolute top-0 start-50 translate-middle-x"
+    role="alert"
+  >
+    {{ message }}
+    <button
+      type="button"
+      class="btn-close"
+      data-bs-dismiss="alert"
+      aria-label="Close"
+    ></button>
+  </div>
 {% endfor %}
