--- a/templates/direct_messages/message_room.html
+++ b/templates/direct_messages/message_room.html
@@ -24,13 +24,14 @@
       {% include "direct_messages/_follower_info.html" %}
     </div>
     <!-- メッセージエリア -->
-    <div class="bg-danger mb-5" style="height: 400px;">
-      ここにメッセージを表示します。
+    <div class="mt-3">
+      {% for message in message_history %}
+        {% include "direct_messages/_message.html" %}
+      {% endfor %}
     </div>
   </div>
-
   <!-- コメントフォームエリア -->
-  <div class="p-3 border-top border-secondary sticky-bottom" style="">
+  <div class="p-3 border-top border-secondary sticky-bottom">
     {% include "direct_messages/_messageform.html" %}
   </div>
 </div>
