--- a/templates/tweets/_tweet.html
+++ b/templates/tweets/_tweet.html
@@ -49,11 +49,16 @@
                   {% endif %}
                 </form>
               <li>
-              <li>
-                <a href="{% url "direct_messages:message_room" tweet.user.username %}" class="dropdown-item btn">
-                  {{ tweet.user.username }}さんにメッセージ
-                </a>
-              <li>
+
+              {% if tweet.user.is_following  %}
+                <!-- ツイート投稿者が自身のフォロワーの場合 -->
+                <li>
+                  <a href="{% url "direct_messages:message_room" tweet.user.username %}" class="dropdown-item btn">
+                    {{ tweet.user.username }}さんにメッセージ
+                  </a>
+                <li>
+              {% endif %}
+
             {% endif %}
           </ul>
         </div>
