✨ 通知一覧ページへのリンクをドロップダウンメニューとサイドバーに追加

--- a/templates/_dropdown_menu_items.html
+++ b/templates/_dropdown_menu_items.html
@@ -5,7 +5,7 @@
   </a>
 </li>
 <li>
-  <a href="#" class="dropdown-item">
+  <a href="{% url "notifications:notification_list" %}" class="dropdown-item">
     <i class="bi bi-bell me-2"></i>
     <span>通知</span>
   </a>
