--- a/templates/_sidebar.html
+++ b/templates/_sidebar.html
@@ -8,7 +8,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-white">
+      <a href={% url "notifications:notification_list" %} class="nav-link text-white">
         <i class="bi bi-bell me-2"></i>
         <span>通知</span>
       </a>
