--- a/templates/_sidebar_icons_only.html
+++ b/templates/_sidebar_icons_only.html
@@ -7,7 +7,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link text-white">
+      <a href="{% url "notifications:notification_list" %}" class="nav-link text-white">
         <i class="bi bi-bell"></i>
       </a>
     </li>
