--- a/templates/tweets/bookmark.html
+++ b/templates/tweets/bookmark.html
@@ -23,16 +23,14 @@
     {% for tweet in tweet_list  %}
       {% include "tweets/_tweet.html" %}
     {% endfor %}
+    <!-- ページネーション -->
+    <div class="mt-3">
+      {% include "_pagenation.html" %}
+    </div>
   {% else %}
     <div class="mt-5">
       <p class="text-center">ブックマークは存在しません</p>
     </div>
   {% endif %}
 </div>
-
-<!-- ページネーション -->
-<div class="mt-3">
-  {% include "tweets/_pagenation.html" %}
-</div>
-
 {% endblock content %}
