--- a/templates/profiles/my_tweets.html
+++ b/templates/profiles/my_tweets.html
@@ -12,8 +12,8 @@
   <div class="p-1 border-bottom border-secondary">
     {% include "profiles/_tabs.html" %}
   </div>
-  <!-- ツイート一覧エリア -->
-  <div>
+  <!-- ツイート一覧 -->
+  <div class="overflow-y-auto">
     {% if tweet_list %}
       {% for tweet in tweet_list %}
         {% include "tweets/_tweet.html" %}
