--- a/templates/profiles/_user_profile.html
+++ b/templates/profiles/_user_profile.html
@@ -1,6 +1,6 @@
 {% load humanize %}
 <!-- プロフィールヘッダー -->
-<div class="d-flex align-items-center px-3">
+<div class="d-flex align-items-center px-3 bg-dark sticky-top border-bottom border-secondary">
   <div style="min-width: 56px">
     <a href="{{ request.META.HTTP_REFERER }}" class="text-white">
       <i class="bi bi-arrow-left"></i>
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="border-top border-bottom border-secondary position-relative" style="height: 200px;">
+<div class="border-bottom border-secondary position-relative" style="height: 200px;">
   <!-- ヘッダー画像 -->
   {% if user_profile.header_image %}
     <img
