--- a/templates/profiles/liked_tweets.html
+++ b/templates/profiles/liked_tweets.html
@@ -13,7 +13,7 @@
     {% include "profiles/_tabs.html" %}
   </div>
   <!-- ツイート一覧エリア -->
-  <div>
+  <div class="overflow-y-auto">
     {% if tweet_list %}
       {% for tweet in tweet_list %}
         {% include "tweets/_tweet.html" %}
