✨ プロフィールページとツイートテンプレートのヘッダーとスクロール調整

--- a/templates/notifications/index.html
+++ b/templates/notifications/index.html
@@ -3,7 +3,7 @@
 {% block title %}通知一覧ページ{% endblock title %}
 
 {% block content %}
-<div class="px-3 border-bottom border-secondary bg-dark sticky-top">
+<div class="px-3 border-bottom border-secondary bg-dark position-sticky top-0 z-3">
   <!-- ヘッダーエリア -->
   <div class="d-flex align-items-center" style="height: 54px">
     <div style="min-width: 56px">
