--- a/templates/tweets/bookmark.html
+++ b/templates/tweets/bookmark.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!-- ヘッダーエリア -->
-<div class="px-3 border-bottom border-secondary bg-dark sticky-top">
+<div class="px-3 border-bottom border-secondary bg-dark position-sticky top-0 z-3">
   <div class="d-flex align-items-center" style="height: 54px">
     <div style="min-width: 56px">
       <a href="{{ request.META.HTTP_REFERER }}" class="text-white">
