--- a/templates/tweets/index.html
+++ b/templates/tweets/index.html
@@ -3,7 +3,7 @@
 {% block title %}ホームページ{% endblock title %}
 
 {% block content %}
-<div class="p-1 border-bottom border-secondary bg-dark sticky-top">
+<div class="p-1 border-bottom border-secondary bg-dark position-sticky top-0 z-3">
   {% include "tweets/_tabs.html" %}
 </div>
 <div class="p-3 pb-2 border-bottom border-secondary">
