✨ 通知モデルにコメントオブジェクトも保存できるようにする

--- a/templates/notifications/_notification_item.html
+++ b/templates/notifications/_notification_item.html
@@ -77,7 +77,7 @@
           </a>さん
         </div>
         <!-- ツイート内容 -->
-        <p class="m-0">{{ item.tweet.content }}</p>
+        <p class="m-0">{{ item.comment.content }}</p>
       </div>
     </div>
   {% endif %}
