✨ ナビゲーションタブのスタイルと現在のページ表示を改善

--- a/templates/tweets/_comment.html
+++ b/templates/tweets/_comment.html
@@ -1,4 +1,4 @@
-<div class="d-flex px-3 py-2 border border-secondary">
+<div class="d-flex px-3 py-2 border-bottom border-secondary">
   <!-- コメントユーザーのアイコン -->
   <a href="{% url 'profiles:my_tweet_list' comment.user.username %}">
     <img
