--- a/templates/profiles/_tabs.html
+++ b/templates/profiles/_tabs.html
@@ -1,14 +1,18 @@
-<ul class="nav text-center">
+<ul class="nav nav-underline text-center">
   <li class="nav-item flex-fill">
-    <a class="nav-link text-white" href="{% url "profiles:my_tweet_list" user_profile.username %}">ツイート</a>
+    <a class="nav-link text-white {% if request.resolver_match.url_name == 'my_tweet_list' %}active border-bottom border-info border-3{% endif %}"
+       href="{% url "profiles:my_tweet_list" user_profile.username %}">ツイート</a>
   </li>
   <li class="nav-item flex-fill">
-    <a class="nav-link text-white" href="{% url "profiles:liked_tweet_list" user_profile.username %}">いいね</a>
+    <a class="nav-link text-white {% if request.resolver_match.url_name == 'liked_tweet_list' %}active border-bottom border-info border-3{% endif %}"
+       href="{% url "profiles:liked_tweet_list" user_profile.username %}">いいね</a>
   </li>
   <li class="nav-item flex-fill">
-    <a class="nav-link text-white" href="{% url "profiles:retweeted_tweet_list" user_profile.username %}">リツイート</a>
+    <a class="nav-link text-white {% if request.resolver_match.url_name == 'retweeted_tweet_list' %}active border-bottom border-info border-3{% endif %}"
+       href="{% url "profiles:retweeted_tweet_list" user_profile.username %}">リツイート</a>
   </li>
   <li class="nav-item flex-fill">
-    <a class="nav-link text-white" href="{% url "profiles:commented_tweet_list" user_profile.username %}">コメント</a>
+    <a class="nav-link text-white {% if request.resolver_match.url_name == 'commented_tweet_list' %}active border-bottom border-info border-3{% endif %}"
+       href="{% url "profiles:commented_tweet_list" user_profile.username %}">コメント</a>
   </li>
 </ul>
